# gRPC_Monitor

./: CMakeLists.txt  DC_Center.cpp  Makefile  Monitor.py  Monitor_Sync_Client.py  Monitor_Sync_Server.py  README.md  README.txt  Rpc_Async_Client.cpp  Rpc_Sync_Client.cpp  grpc.pcap
protobuf/: PMonitor.grpc.pb.cc  PMonitor.grpc.pb.h  PMonitor.pb.cc  PMonitor.pb.h  PMonitor.proto  PMonitor_pb2.py  PMonitor_pb2_grpc.py  __init__.py
